+ Fix SVG display on IE 9,10,11 + Fix Sketchup::RegionalSettings call on SU < 2016

--- a/src/ladb_opencutlist/less/tabs/cutlist.less
+++ b/src/ladb_opencutlist/less/tabs/cutlist.less
@@ -112,7 +112,6 @@
     shape-rendering: geometricPrecision;
     text-rendering: optimizeLegibility;
     width: 100%;
-    height: auto;
 
     /* .sheet */
 
